test/bad/generics/void01.px

func f<T>(T x) def
    return

f(f(0))
